# nav2_mcp_server

./: .dockerignore  .env.example  Dockerfile  README.md  mcp.json  pyproject.toml
.github/workflows/: python-package.yml
docs/: TIAGO_HUMBLE_SETUP.md
src/nav2_mcp_server/: config.py  exceptions.py  navigation.py
tests/: test_config.py  test_navigation.py
