[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nav2-mcp-server"
version = "1.0.0"
authors = [
    {name = "Alberto J. Tudela Roldán", email = "ajtudela@gmail.com"},
]
description = "MCP server wrapping Nav2 action clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio",
    "empy>=4.2",
    "fastmcp>=2.12.3",
    "lark>=1.3.0",
    # numpy<2.3 keeps Python 3.10 (ROS 2 Humble / Ubuntu 22.04) supported;
    # numpy 2.3+ requires Python 3.11+.
    "numpy>=1.24",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "autopep8>=2.0.0",
    "flake8>=7.0.0",
    "flake8-quotes>=3.3.0",
    "isort>=5.13.0",
    "tox>=4.24.1",
    "mypy>=1.14.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ajtudela/nav2_mcp_server"
"Bug Reports" = "https://github.com/ajtudela/nav2_mcp_server/issues"
"Source" = "https://github.com/ajtudela/nav2_mcp_server"

[project.scripts]
nav2-mcp-server = "nav2_mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.isort]
multi_line_output = 3  # Mode 3: Vertical Hanging Indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
# Google Style section order
force_single_line = false
force_sort_within_sections = false
lexicographical = false
order_by_type = false
group_by_package = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["arg-type", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
omit = [
    "src/nav2_mcp_server/__main__.py",
    "tests/*",
]

[tool.coverage.report]
fail_under = 98
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.tox]
env_list = ["3.10"]
